initial nav design

--- a/index.html
+++ b/index.html
@@ -1,12 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Desktop</title>
     <link rel="stylesheet" href="style/styles.css">
 </head>
+
 <body>
-    
+    <header>
+        <nav class="flex">
+            <div class="logo flex">
+                <img src="assets/logo.png" alt="">
+                <h1>SCHOOL</h1>
+            </div>
+
+            <div>
+                <ul class="nav-list flex">
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Facilities</li>
+                    <li>Admission</li>
+                </ul>
+            </div>
+
+            <div class="nav-btn">
+                <button>
+                    Contact
+                </button>
+            </div>
+        </nav>
+    </header>
 </body>
+
 </html>
