--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <h1>SCHOOL</h1>
             </div>
 
-            <div>
+            <div class="nav-list">
                 <ul class="nav-list flex">
                     <li>Home</li>
                     <li>About</li>
@@ -29,6 +29,10 @@
                 <button>
                     Contact
                 </button>
+            </div>
+
+            <div class="hamburger">
+                <img src="https://img.icons8.com/?size=100&id=36389&format=png&color=000000" alt="">
             </div>
         </nav>
     </header>
