Her section structure and fonts imported

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
 
             <div class="nav-list">
                 <ul class="nav-list flex">
-                    <li>Home</li>
-                    <li>About</li>
-                    <li>Facilities</li>
-                    <li>Admission</li>
+                    <li style="color: orange;">Home</li>
+                    <li style="color: skyblue;">About</li>
+                    <li style="color: #05D4DF;">Facilities</li>
+                    <li style="color: var(--violet);">Admission</li>
                 </ul>
             </div>
 
@@ -36,6 +36,26 @@
             </div>
         </nav>
     </header>
+
+    <main>
+        <section class="hero-container flex">
+            <div class="hero-content flex">
+                <h1>
+                    <span style="color: orange;">Empowering</span> <br>
+                    students from small age
+                    <span style="color: skyblue;">towards vision</span>
+                </h1>
+                <p>With the courage, Confidence, Creativity and Compassion to make their Unique Contribution in a
+                    Diverse and Dynamic World.</p>
+                <div class="btn-primary">
+                    <button>Enroll Now</button>
+                </div>
+            </div>
+            <div class="hero-img">
+                <img src="assets/hero-kids.png" alt="">
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
