Curriculum section structure

--- a/index.html
+++ b/index.html
@@ -55,6 +55,22 @@
                 <img src="assets/hero-kids.png" alt="">
             </div>
         </section>
+
+        <section class="curriculum">
+            <h2>Standard Curriculum</h2>
+            <div class="cards">
+                <div class="card">
+                    <div class="card-img-container">
+                        <img src="assets/kinder.png" alt="">
+                    </div>
+                    <h3>Kinder (3-6) Years</h3>
+                    <p>Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <h4>Read More</h4>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 
