Curriculum section done - big screen

--- a/index.html
+++ b/index.html
@@ -58,8 +58,9 @@
 
         <section class="curriculum">
             <h2>Standard Curriculum</h2>
-            <div class="cards">
-                <div class="card">
+            <div class="cards flex">
+
+                <div class="card flex">
                     <div class="card-img-container">
                         <img src="assets/kinder.png" alt="">
                     </div>
@@ -67,7 +68,43 @@
                     <p>Cum sociis natoque penatibus et magnis
                         dis parturient montes, nascetur ridiculus
                         mu sdis parturient</p>
-                    <h4>Read More</h4>
+                    <h4 style="color: skyblue;">Read More</h4>
+                </div>
+
+                <div class="card flex">
+                    <div class="card-img-container">
+                        <img src="assets/elementary.png" alt="">
+                    </div>
+                    <h3>Elementary School</h3>
+                    <p>Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <h4 style="color: orange;">Read More</h4>
+                </div>
+
+                <div class="card flex">
+                    <div class="card-img-container">
+                        <img src="assets/middle.png" alt="">
+                    </div>
+                    <h3>Middle (10-16) Years</h3>
+                    <p>Cum sociis natoque penatibus et magnis
+                        dis parturient montes, nascetur ridiculus
+                        mu sdis parturient</p>
+                    <h4 style="color: var(--violet);">Read More</h4>
+                </div>
+            </div>
+
+            <div class="slider flex">
+                <div class="right">
+                    <button>
+                        <img src="assets/Symbol Left.png" alt="">
+                    </button>
+
+                </div>
+                <div class="left">
+                    <button>
+                        <img src="assets/Symbol Right.png" alt="">
+                    </button>
                 </div>
             </div>
         </section>
