curriculum section made responsive

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </header>
 
     <main>
-        
+
         <section class="hero-container flex">
             <div class="hero-content flex">
                 <h1>
@@ -57,7 +57,7 @@
             </div>
         </section>
 
-        <section class="curriculum">
+        <section class="curriculum flex">
             <h2>Standard Curriculum</h2>
             <div class="cards flex">
 
