footer structure added

--- a/index.html
+++ b/index.html
@@ -110,6 +110,37 @@
             </div>
         </section>
     </main>
+
+    <footer class="flex">
+        <div class="footer-content">
+            <div class="footer-img-container">
+                <img src="assets/logo.png" alt="">
+            </div>
+
+            <h1>Kids
+                Education</h1>
+            <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie.
+                Mayo rib sauce Hawaiian meatball.</p>
+        </div>
+        <div class="footer-list">
+            <h3>About School</h3>
+            <ul class="flex">
+                <li>Home</li>
+                <li>About</li>
+                <li>Facilities</li>
+                <li>Admission</li>
+            </ul>
+        </div>
+        <div class="footer-socials">
+            <h3>Keep In Touch</h3>
+            <ul class="flex">
+                <li>fb</li>
+                <li>dribble</li>
+                <li>x</li>
+                <li>g</li>
+            </ul>
+        </div>
+    </footer>
 </body>
 
 </html>
