--- a/index.html
+++ b/index.html
@@ -38,7 +38,6 @@
     </header>
 
     <main>
-
         <section class="hero-container flex">
             <div class="hero-content flex">
                 <h1>
@@ -109,36 +108,50 @@
                 </div>
             </div>
         </section>
+
+        <section class="stories">
+            <h1>
+                <div class="cards">
+                    <div class="card"></div>
+                </div>
+            </h1>
+        </section>
+
+
     </main>
+    
+    <footer >
 
-    <footer class="flex">
-        <div class="footer-content">
-            <div class="footer-img-container">
-                <img src="assets/logo.png" alt="">
+        <div class="footer-container flex">
+            <div class="footer-content">
+                <div class="footer-title-box flex">
+                    <img src="assets/logo.png" alt="">
+                    <!-- <div class="footer-img-container">
+                    </div> -->
+                    <h1>Kids <br>
+                        Education</h1>
+                </div>
+                <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie.
+                    Mayo rib sauce Hawaiian meatball.</p>
             </div>
-
-            <h1>Kids
-                Education</h1>
-            <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie.
-                Mayo rib sauce Hawaiian meatball.</p>
-        </div>
-        <div class="footer-list">
-            <h3>About School</h3>
-            <ul class="flex">
-                <li>Home</li>
-                <li>About</li>
-                <li>Facilities</li>
-                <li>Admission</li>
-            </ul>
-        </div>
-        <div class="footer-socials">
-            <h3>Keep In Touch</h3>
-            <ul class="flex">
-                <li>fb</li>
-                <li>dribble</li>
-                <li>x</li>
-                <li>g</li>
-            </ul>
+            <div class="footer-list">
+                <h3>About School</h3>
+                <ul class="flex">
+                    <li>Home</li>
+                    <li>About</li>
+                    <li>Facilities</li>
+                    <li>Admission</li>
+                </ul>
+            </div>
+            <div class="footer-socials">
+                <h3>Keep In Touch</h3>
+                <div class="socials flex">
+                    <img src="assets/fb.png" alt="">
+                    <img src="assets/dribble.png" alt="">
+                    <img src="assets/twitter.png" alt="">
+                    <img src="assets/google+.png" alt="">
+                </div>
+            </div>
         </div>
     </footer>
 </body>
