--- a/index.html
+++ b/index.html
@@ -110,17 +110,41 @@
         </section>
 
         <section class="stories">
-            <h1>
-                <div class="cards">
-                    <div class="card"></div>
+            <h2>
+                Our Stories
+            </h2>
+
+            <div class="cards">
+                <div class="card card-1">
+                    <div class="card-img-container">
+                        <img src="assets/story-1.png" alt="">
+                    </div>
+
+                    <h2>A fun toddler coloring training on
+                        classroom</h2>
+                    <p>Beautiful branding for changes by Never Now in Australia.
+                        changes is a platform for open discussion in an inclusive and
+                        collaborative environment, providing the...</p>
                 </div>
-            </h1>
+                <div class="card card-2">
+                    <div class="card-img-container">
+                        <img src="assets/story-1.png" alt="">
+                    </div>
+
+                    <h2>A fun toddler coloring training on
+                        classroom</h2>
+
+                </div>
+                <div class="card card-3">card-3</div>
+                <div class="card card-4">card-4</div>
+                <div class="card card-5">card-5</div>
+            </div>
         </section>
 
 
     </main>
-    
-    <footer >
+
+    <footer>
 
         <div class="footer-container flex">
             <div class="footer-content">
@@ -131,7 +155,8 @@
                     <h1>Kids <br>
                         Education</h1>
                 </div>
-                <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple Aussie.
+                <p>Pizza ipsum dolor meat lovers buffalo. Deep dolor roll melted bacon Bianca pan bacon pineapple
+                    Aussie.
                     Mayo rib sauce Hawaiian meatball.</p>
             </div>
             <div class="footer-list">
