--- a/index.html
+++ b/index.html
@@ -126,18 +126,40 @@
                         changes is a platform for open discussion in an inclusive and
                         collaborative environment, providing the...</p>
                 </div>
-                <div class="card card-2">
+
+                <div class="card card-2 flex" style="flex-direction: column;">
                     <div class="card-img-container">
-                        <img src="assets/story-1.png" alt="">
+                        <img src="assets/story-2.png" alt="">
                     </div>
 
-                    <h2>A fun toddler coloring training on
-                        classroom</h2>
-
+                    <h2>Find out if a school fits the
+                        family’s needs</h2>
                 </div>
-                <div class="card card-3">card-3</div>
-                <div class="card card-4">card-4</div>
-                <div class="card card-5">card-5</div>
+
+                <div class="card card-3 flex" style="flex-direction: column;">
+                    <div class="card-img-container">
+                        <img src="assets/story-3.png" alt="">
+                    </div>
+
+                    <h2>Summer math & literacy centres for kids</h2>
+                </div>
+
+                <div class="card card-4">
+                    <div class="card-img-container">
+                        <img src="assets/story-4.png" alt="">
+                    </div>
+
+                    <h2>Classroom management techniques for new tutors</h2>
+                </div>
+
+                <div class="card card-5">
+                    <div class="card-img-container">
+                        <img src="assets/story-5.png" alt="">
+                    </div>
+
+                    <h2>Conversation rhymes
+                        improve kids listening</h2>
+                </div>
             </div>
         </section>
 
