--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
                 </button>
             </div>
 
-            <div class="hamburger">
+            <!-- <div class="hamburger">
                 <img src="https://img.icons8.com/?size=100&id=36389&format=png&color=000000" alt="">
-            </div>
+            </div> -->
         </nav>
     </header>
 
