--- a/index.html
+++ b/index.html
@@ -161,6 +161,13 @@
                         improve kids listening</h2>
                 </div>
             </div>
+
+
+
+            <div class="btn-primary flex">
+                <button>View All</button>
+            </div>
+
         </section>
 
 
