color gradient to cur cards

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <h2>Standard Curriculum</h2>
             <div class="cards flex">
 
-                <div class="card flex">
+                <div class="card card-1 flex ">
                     <div class="card-img-container">
                         <img src="assets/kinder.png" alt="">
                     </div>
@@ -71,7 +71,8 @@
                     <h4 style="color: skyblue;">Read More</h4>
                 </div>
 
-                <div class="card flex">
+                <div class="card flex" style="background: linear-gradient( to bottom, rgba(255, 213, 128) 0%,
+                    rgba(255, 213, 128) 5%, transparent 33% ), white; background-size: cover;">
                     <div class="card-img-container">
                         <img src="assets/elementary.png" alt="">
                     </div>
@@ -82,7 +83,8 @@
                     <h4 style="color: orange;">Read More</h4>
                 </div>
 
-                <div class="card flex">
+                <div class="card flex" style="background: linear-gradient( to bottom, var(--violet) 0%,
+                    var(--violet) 5%, transparent 33% ), white; background-size: cover;">
                     <div class="card-img-container">
                         <img src="assets/middle.png" alt="">
                     </div>
