--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+    <marquee behavior="scroll" direction="right" scrollamount="12">
+        <p>Free Admission Till February 2026</p>
+    </marquee>
     <header>
         <nav class="flex">
             <div class="logo flex">
@@ -38,8 +41,10 @@
     </header>
 
     <main>
+
         <section class="hero-container flex">
             <div class="hero-content flex">
+
                 <h1>
                     <span style="color: orange;">Empowering</span> <br>
                     students from small age
@@ -55,6 +60,7 @@
                 <img src="assets/hero-kids.png" alt="">
             </div>
         </section>
+
 
         <section class="curriculum flex">
             <h2>Standard Curriculum</h2>
@@ -202,10 +208,10 @@
             <div class="footer-socials">
                 <h3>Keep In Touch</h3>
                 <div class="socials flex">
-                    <img src="assets/fb.png" alt="">
-                    <img src="assets/dribble.png" alt="">
-                    <img src="assets/twitter.png" alt="">
-                    <img src="assets/google+.png" alt="">
+                    <img class="a1" src="assets/fb.png" alt="">
+                    <img class="a2" src="assets/dribble.png" alt="">
+                    <img class="a3" src="assets/twitter.png" alt="">
+                    <img class="a4" src="assets/google+.png" alt="">
                 </div>
             </div>
         </div>
