--- a/index.html
+++ b/index.html
@@ -9,9 +9,7 @@
 </head>
 
 <body>
-    <marquee behavior="scroll" direction="right" scrollamount="12">
-        <p>Free Admission Till February 2026</p>
-    </marquee>
+
     <header>
         <nav class="flex">
             <div class="logo flex">
@@ -39,6 +37,10 @@
             </div> -->
         </nav>
     </header>
+
+    <marquee behavior="scroll" direction="right" scrollamount="12">
+        <p>Free Admission Till February 2026</p>
+    </marquee>
 
     <main>
 
@@ -128,6 +130,12 @@
                         <img src="assets/story-1.png" alt="">
                     </div>
 
+                    <button id="date-badge">
+                        <span>
+                            Novembor 19, 2019
+                        </span>
+                    </button>
+
                     <h2>A fun toddler coloring training on
                         classroom</h2>
                     <p>Beautiful branding for changes by Never Now in Australia.
@@ -140,6 +148,12 @@
                         <img src="assets/story-2.png" alt="">
                     </div>
 
+                    <button id="date-badge-2">
+                        <span>
+                            Novembor 19, 2019
+                        </span>
+                    </button>
+
                     <h2>Find out if a school fits the
                         family’s needs</h2>
                 </div>
@@ -149,6 +163,12 @@
                         <img src="assets/story-3.png" alt="">
                     </div>
 
+                    <button id="date-badge-2">
+                        <span>
+                            Novembor 19, 2019
+                        </span>
+                    </button>
+
                     <h2>Summer math & literacy centres for kids</h2>
                 </div>
 
@@ -157,6 +177,12 @@
                         <img src="assets/story-4.png" alt="">
                     </div>
 
+                    <button id="date-badge-3">
+                        <span>
+                            Novembor 19, 2019
+                        </span>
+                    </button>
+
                     <h2>Classroom management techniques for new tutors</h2>
                 </div>
 
@@ -164,6 +190,12 @@
                     <div class="card-img-container">
                         <img src="assets/story-5.png" alt="">
                     </div>
+
+                    <button id="date-badge-3">
+                        <span>
+                            Novembor 19, 2019
+                        </span>
+                    </button> 
 
                     <h2>Conversation rhymes
                         improve kids listening</h2>
