--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                         collaborative environment, providing the...</p>
                 </div>
 
-                <div class="card card-2 flex" style="flex-direction: column;">
+                <div class="card card-2" style="flex-direction: column;">
                     <div class="card-img-container">
                         <img src="assets/story-2.png" alt="">
                     </div>
@@ -158,7 +158,7 @@
                         family’s needs</h2>
                 </div>
 
-                <div class="card card-3 flex" style="flex-direction: column;">
+                <div class="card card-3" style="flex-direction: column;">
                     <div class="card-img-container">
                         <img src="assets/story-3.png" alt="">
                     </div>
