Hamburger added for mobile devices on navbar

--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
                 <button>
                     Contact
                 </button>
+
+                <div class="svg-container">
+                    <img src="assets/nav.svg" alt="">
+                </div>
+
+
+
             </div>
 
             <!-- <div class="hamburger">
@@ -195,7 +202,7 @@
                         <span>
                             Novembor 19, 2019
                         </span>
-                    </button> 
+                    </button>
 
                     <h2>Conversation rhymes
                         improve kids listening</h2>
